fix: navbar width too long

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -319,7 +319,7 @@ header nav a:hover {
   }
 
   nav.desktop.nav {
-    min-width: 444px;
+    min-width: 312px;
   }
 
   header .close {
